--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 asgiref==3.8.1
 Django==4.2
 django-cors-headers==4.4.0
+django-extensions==3.2.3
+djangorestframework==3.15.2
+drf-yasg==1.21.7
+inflection==0.5.1
+mysqlclient==2.2.4
+packaging==24.1
 pillow==10.4.0
+pytz==2024.2
+PyYAML==6.0.2
 sqlparse==0.5.1
+uritemplate==4.1.1
